<resources>
    <string name="app_name">Travel_Guide_App_1181390_1182126</string>
    <string name="title_activity_nav_home">NavHome</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_all">ALL</string>
    <string name="menu_favorite">Favorite</string>
    <string name="menu_sorted">Sorted</string>
    <string name="menu_profile">Profile</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>