<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_sorted"
        android:name="com.example.travel_guide_app_1181390_1182126.ui.sorted.SortedFragment"
        android:label="@string/menu_sorted"
        tools:layout="@layout/fragment_sorted" />
    <fragment
        android:id="@+id/nav_profile"
        android:name="com.example.travel_guide_app_1181390_1182126.ui.profile.ProfileFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_profile" >
        <argument
            android:name="email"
            app:argType="string" />
    </fragment>
    <fragment
        android:id="@+id/nav_favorite"
        android:name="com.example.travel_guide_app_1181390_1182126.ui.favorite.FavoriteFragment"
        android:label="@string/menu_favorite"
        tools:layout="@layout/fragment_favorite" />
    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.travel_guide_app_1181390_1182126.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_all"
        android:name="com.example.travel_guide_app_1181390_1182126.ui.all.AllFragment"
        android:label="@string/menu_all"
        tools:layout="@layout/fragment_all" />
</navigation>